@@ -1,3 +1,7 @@
+* Wed Jun 16 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 8.2.0
+- Removed support for Puppet 5
+- Ensured support for Puppet 7 in requirements and stdlib
+
 * Wed May 26 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.1.3
 - Fixed
   - Fixed a bug where the pupmod::master::sysconfig class was not getting applied
